test/functional/should-fail/run/testrun1.f3
/*
 * @test/fail
 */

import java.lang.System;

var v:Integer = 10;

protected function f(i:Integer) { System.out.println(i); }

f(v);

